# mlops-assignment-beehero

./: .gitignore  Dockerfile  Makefile  README.md  architectural_decisions.md  pyproject.toml  serve_api.py  train_pipeline.py
.github/workflows/: ml_pipeline.yml
resources/: colony_size.csv
src/: evaluate.py  train.py
src/api/: __init__.py  main.py  schema.py  service.py
src/config/: config.yaml  schema.py
src/data/loader/: __init__.py  component.py  schema.py
src/data/outlier_remover/: __init__.py  component.py  schema.py
src/data/preprocessor/: __init__.py  component.py  feature_store.py  schema.py
src/models/: colony_classifier.py  pyfunc_wrapper.py
src/utils/: logger.py
tests/: test_api.py  test_colony_classifier.py  test_data_loader.py  test_evaluator.py  test_outlier_remover.py  test_preprocessor.py  test_train.py
